<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_configuration">打开串口失败:参数错误!</string>
    <string name="error_security">打开串口失败:没有串口读/写权限!</string>
    <string name="error_unknown">打开串口失败:未知错误!</string>
    <string name="app_name">Doorplate</string>
    <string name="loading">正在初始化系统，请稍后...</string>
    <string name="txt_init">注册设备</string>
    <string name="edt_name">请输入设备名称</string>
    <string name="edt_jsdm">请输入教室代码</string>
    <string name="edt_bjdm">请输入班级代码</string>
    <string name="edt_bjdm_">如果是固定教室请输入班级代码，否则不用填写</string>
    <string name="curriculum">课程</string>
    <string name="teacher">教师</string>
    <string name="time">时间</string>
    <string name="banji">班级</string>
    <string name="solid_arrive">实到</string>
    <string name="arrive">应到</string>
    <string name="noclass">暂无课程</string>
    <string name="noclass_">当前时刻暂无课程</string>
    <string name="nonew">暂无通知</string>
    <string name="classinfo">教室信息</string>
    <string name="banjiinfo">班级信息</string>
    <string name="gly"> (管理员)</string>
    <string name="bzr"> (辅导员)</string>
    <string name="jsnl">教室容量</string>
    <string name="xszs">学生总数</string>
    <string name="remark">备注:</string>
    <string name="equ_name">设备名称</string>
    <string name="equ_num">数量</string>
    <string name="equ_xh">型号</string>
    <string name="equ_state">状态</string>
    <string name="touxiang">头像</string>
    <string name="zuoweihao">座位号</string>
    <string name="xuehao">学号</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="zhiwu">职务</string>
    <string name="no_classinfo">暂无教室信息</string>
    <string name="no_curriculuminfo">暂无课程信息</string>
    <string name="unused">闲置</string>
    <string name="useing">在用</string>
    <string name="repair">维修</string>
    <string name="scrap">报废</string>
    <string name="none">无</string>
    <string name="notice">通知公告</string>
    <string name="attendinfo">考勤信息</string>
    <string name="student_list">学生列表</string>
    <string name="jryd">今日应到</string>
    <string name="yqd">已签到</string>
    <string name="ren">人</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="videocall">对讲</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="ethernet">以太网</string>
    <string name="wifi">WIFI</string>
    <string name="disconnected">未连接</string>
    <string name="ip">IP地址</string>
    <string name="mask">子网掩码</string>
    <string name="gateway">网关</string>
    <string name="dns1">主DNS</string>
    <string name="dns2">备DNS</string>
    <string name="staticip">静态IP</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="wifi_not_available">以太网已连接，WiFi不可操作</string>
    <string name="wifi_scan">正在搜索中...</string>
    <string name="wifi_disenble">WiFi未打开</string>
    <string name="wifi_connect">已连接</string>
    <string name="wifi_save_none">已保存，未受保护的网络</string>
    <string name="wifi_save_wpawpa2">已保存，通过WPA/WPA2进行保护</string>
    <string name="wifi_save_wpa">已保存，通过WPA进行保护</string>
    <string name="wifi_save_wpa2">已保存，通过WPA2进行保护</string>
    <string name="wifi_save_wep">已保存，通过WEP进行保护</string>
    <string name="wifi_save_wps">（可使用WPS）</string>
    <string name="wifi_none">未受保护的网络</string>
    <string name="wifi_wpawpa2">通过WPA/WPA2进行保护</string>
    <string name="wifi_wpa">通过WPA进行保护</string>
    <string name="wifi_wpa2">通过WPA2进行保护</string>
    <string name="wifi_wep">通过WEP进行保护</string>
    <string name="wifi_auth">正在进行身份验证...</string>
    <string name="wifi_connecting">连接中...</string>
    <string name="wifi_auth_error">身份验证出错</string>
    <string name="wifi_getip">IP地址获取中...</string>
    <string name="wifi_forget">断开</string>
    <string name="wifi_load">加载中...</string>
    <string name="wifi_pwd_error">密码不足八位数</string>
    <string name="wifi_pwd">请输入密码</string>
    <string name="wifi_show_pwd">显示密码</string>
    <string name="set_success">设置成功</string>
    <string name="input_format_error">输入格式有误</string>
    <string name="input_none">请输入完整</string>
    <string name="wifi_save">已保存</string>
    <string name="wifi_connect_">连接</string>
    <string name="setting_class">班牌设置</string>
    <string name="jsdm">教室代码</string>
    <string name="bjdm">班级代码</string>
    <string name="server_ip">服务器地址</string>
    <string name="call_other">呼叫教室</string>
    <string name="year">年</string>
	<string name="month">月</string>
	<string name="day">日</string>

</resources>