<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/txt_init"
        android:textColor="@color/white"
        android:textSize="80sp" />

    <RelativeLayout
        android:id="@+id/ly_register_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <EditText
            android:id="@+id/edt_init_ip"
            android:layout_width="750dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:hint="请输入服务器IP"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="45sp" />

        <Button
            android:id="@+id/btn_init_next"
            android:layout_width="750dp"
            android:layout_height="100dp"
            android:layout_below="@+id/edt_init_ip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="输入服务器地址，下一步"
            android:textSize="50sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ly_register_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:visibility="invisible" >

        <EditText
            android:id="@+id/edt_init_name"
            android:layout_width="650dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/edt_name"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/edt_init_jsdm"
            android:layout_width="650dp"
            android:layout_height="100dp"
            android:layout_below="@id/edt_init_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:hint="@string/edt_jsdm"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/edt_init_bjdm"
            android:layout_width="650dp"
            android:layout_height="100dp"
            android:layout_below="@id/edt_init_jsdm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:hint="@string/edt_bjdm"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textSize="50sp" />

        <Spinner
            android:id="@+id/sp_init"
            android:layout_width="650dp"
            android:layout_height="100dp"
            android:layout_below="@id/edt_init_bjdm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textSize="50sp" />

        <!--<Button-->
            <!--android:id="@+id/btn_init_ok"-->
            <!--android:layout_width="650dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:layout_below="@+id/sp_init"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="50dp"-->
            <!--android:text="@string/txt_init"-->
            <!--android:textSize="50sp" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edt_init_bjdm"
            android:layout_below="@+id/edt_init_bjdm"
            android:text="@string/edt_bjdm_"
            android:textColor="@color/white" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_init_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="设置"
        android:textSize="50sp" />

    <!--<Button-->
        <!--android:id="@+id/btn_init_test"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_below="@id/btn_init_set"-->
        <!--android:background="@null" />-->

        <Button
        android:id="@+id/btn_init_test"
            android:layout_width="150dp"
            android:layout_height="80dp"
        android:layout_toRightOf="@id/btn_init_set"
        android:layout_alignParentTop="true"
        android:background="@null" />
        <Button
        android:id="@+id/btn_init_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_init_test"
        android:text="@string/txt_init"
        android:textSize="50sp" />

</RelativeLayout>